--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.12.2",
     "jade": "~1.9.2",
     "less-middleware": "1.0.x",
+    "lodash": "^3.6.0",
     "morgan": "~1.5.1",
     "mysql": "^2.6.1",
     "serve-favicon": "~2.2.0"
