--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lodash": "^3.6.0",
     "morgan": "~1.5.1",
     "mysql": "^2.6.1",
-    "serve-favicon": "~2.2.0"
+    "serve-favicon": "~2.2.0",
+    "socket.io": "^1.3.5"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
