--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jade": "~1.9.2",
     "less-middleware": "1.0.x",
     "lodash": "^3.6.0",
+    "moment": "^2.10.2",
     "morgan": "~1.5.1",
     "mysql": "^2.6.1",
     "serve-favicon": "~2.2.0",
