--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "less-middleware": "1.0.x",
     "lodash": "^3.6.0",
     "moment": "^2.10.2",
+    "mongodb": "^2.0.39",
     "morgan": "~1.5.1",
     "mysql": "^2.6.1",
     "serve-favicon": "~2.2.0",
