--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "mongodb": "^2.0.39",
     "morgan": "~1.5.1",
     "mysql": "^2.6.1",
-    "serve-favicon": "~2.2.0",
-    "socket.io": "^1.3.5"
+    "serve-favicon": "~2.2.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
